--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -21,10 +21,10 @@
           deliver exceptional service experiences.
         </p>
         <div class="footer-socials">
-          <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a href="#" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.facebook.com/share/1AKxtzx8RY/" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/knocknfix?igsh=aWJsbnNhemlmdGly&utm_source=ig_contact_invite" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/knocknfix/" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://x.com/KnockNFix99250?t=4y3y_9KgkshQQqR1XIWl3w&s=08" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
 
